# GraphicsEngineVulkan

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  LICENSE  README.md  VulkanRendererConfig.h.in  VulkanRendererConfig.hpp.in  buildEngine.bat  buildEngine.sh  gcovr.cfg  requirements.txt  runCmakeWithAdminRights.bat
ExternalLib/: CMakeLists.txt
ExternalLib/KTX/lib/astc-encoder/Source/: CMakeLists.txt  cmake_core.cmake
ExternalLib/KTX/lib/astc-encoder/Source/UnitTest/: CMakeLists.txt  cmake_core.cmake
ExternalLib/KTX/lib/astc-encoder/Utils/Example/: CMakeLists.txt
ExternalLib/KTX/lib/basisu/: CMakeLists.txt
ExternalLib/KTX/lib/basisu/webgl/encoder/: CMakeLists.txt
ExternalLib/KTX/lib/basisu/webgl/transcoder/: CMakeLists.txt
Src/: App.cpp  CMakeLists.txt  Camera.cpp  GloabalValues.h  Main.cpp  Material.cpp  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  Model.cpp  MyWindow.cpp  MyWindow.h  Scene.cpp  Scene.h  SetsAndBindings.h  Utilities.h  VectorField.cpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer.hpp
Src/GraphicsEngineOpenGL/: CMakeLists.txt  OpenGLRendererConfig.hpp.in
Src/GraphicsEngineOpenGL/app/: App.cpp
Src/GraphicsEngineOpenGL/camera/: Camera.cpp  Camera.hpp
Src/GraphicsEngineOpenGL/cmake/: SetSourceGroups.cmake
Src/GraphicsEngineOpenGL/cmake/filters/: SetExternalLibsFilters.cmake  SetProjectFilters.cmake  SetShaderFilters.cmake
Src/GraphicsEngineOpenGL/compute/: ComputeShaderProgram.cpp  ComputeShaderProgram.hpp
Src/GraphicsEngineOpenGL/gui/: GUI.cpp  GUI.hpp
Src/GraphicsEngineOpenGL/renderer/: OpenGLRendererConfig.hpp  RenderPassSceneDependend.cpp  RenderPassSceneDependend.hpp  Renderer.cpp  Renderer.hpp  ShaderIncludes.cpp  ShaderIncludes.hpp  ShaderProgram.cpp
Src/GraphicsEngineOpenGL/renderer/deferred/: GBuffer.cpp  GBuffer.hpp  GeometryPass.cpp  GeometryPass.hpp  GeometryPassShaderProgram.cpp  GeometryPassShaderProgram.hpp  LightingPass.cpp  LightingPass.hpp  LightingPassShaderProgram.hpp
Src/GraphicsEngineOpenGL/renderer/loading_screen/: LoadingScreen.cpp  LoadingScreen.hpp
Src/GraphicsEngineOpenGL/scene/: AABB.cpp  AABB.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjLoader.cpp  ObjLoader.hpp  ObjMaterial.cpp  Quad.cpp  Scene.cpp  Scene.hpp  ViewFrustumCulling.cpp  ViewFrustumCulling.hpp
Src/GraphicsEngineOpenGL/scene/atmospheric_effects/clouds/: Clouds.cpp  Clouds.hpp  Noise.hpp
Src/GraphicsEngineOpenGL/scene/light/: Light.cpp
Src/GraphicsEngineOpenGL/scene/light/directional_light/: CascadedShadowMap.cpp  CascadedShadowMap.hpp  DirectionalLight.cpp  DirectionalLight.hpp  DirectionalShadowMapPass.cpp  DirectionalShadowMapPass.hpp
Src/GraphicsEngineOpenGL/scene/light/point_light/: OmniDirShadowMap.hpp  OmniDirShadowShaderProgram.hpp  OmniShadowMapPass.cpp  OmniShadowMapPass.hpp  PointLight.cpp  PointLight.hpp
Src/GraphicsEngineOpenGL/scene/shadows/: ShadowMap.cpp
Src/GraphicsEngineOpenGL/scene/sky_box/: SkyBox.cpp  SkyBox.hpp
Src/GraphicsEngineOpenGL/scene/texture/: RepeatMode.cpp  Texture.cpp  Texture.hpp
Src/GraphicsEngineOpenGL/util/: File.cpp  RandomNumbers.cpp
Src/GraphicsEngineOpenGL/window/: Window.cpp
Src/GraphicsEngineVulkan/: CMakeLists.txt  Main.cpp  VulkanRendererConfig.hpp.in
Src/GraphicsEngineVulkan/app/: App.cpp
Src/GraphicsEngineVulkan/cmake/: CompileShadersToSPV.cmake  SetSourceGroups.cmake
Src/GraphicsEngineVulkan/cmake/filters/: SetExternalLibsFilters.cmake  SetProjectFilters.cmake  SetShaderFilters.cmake
Src/GraphicsEngineVulkan/common/: FormatHelper.hpp  MemoryHelper.hpp  Utilities.hpp
Src/GraphicsEngineVulkan/gui/: GUI.cpp  GUI.hpp
Src/GraphicsEngineVulkan/memory/: Allocator.cpp  Allocator.hpp
Src/GraphicsEngineVulkan/renderer/: CommandBufferManager.cpp  CommandBufferManager.hpp  GUIRendererSharedVars.hpp  PathTracing.cpp  PathTracing.hpp  PostStage.cpp  PostStage.hpp  QueueFamilyIndices.hpp  Rasterizer.cpp  Rasterizer.hpp  Raytracing.cpp  Raytracing.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererConfig.h  VulkanRendererConfig.hpp
Src/GraphicsEngineVulkan/renderer/accelerationStructures/: ASManager.cpp  ASManager.hpp  BottomLevelAccelerationStructure.hpp  TopLevelAccelerationStructure.hpp
Src/GraphicsEngineVulkan/renderer/pushConstants/: PushConstantPathTracing.hpp
Src/GraphicsEngineVulkan/rusty_code/: Cargo.toml
Src/GraphicsEngineVulkan/scene/: Camera.cpp  GUISceneSharedVars.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjLoader.cpp  ObjLoader.hpp  ObjMaterial.hpp  ObjectDescription.hpp  Scene.cpp  Scene.hpp  SceneConfig.cpp  SceneConfig.hpp  Texture.cpp  Texture.hpp  Vertex.cpp
Src/GraphicsEngineVulkan/util/: File.cpp  File.hpp
Src/GraphicsEngineVulkan/vulkan_base/: ShaderHelper.cpp  ShaderHelper.hpp  ShaderIncludes.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferManager.cpp  VulkanBufferManager.hpp  VulkanDebug.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanImageView.cpp  VulkanImageView.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
Src/GraphicsEngineVulkan/window/: Window.cpp  Window.hpp
Test/: adminRights.bat  vulkanRendererTest.cpp
Test/commit/: CMakeLists.txt  commitSuite.cpp
Test/commit/OpenGLEngine/: CMakeLists.txt  commitSuite.cpp
Test/commit/OpenGLEngine/cmake/: SetTestFilters.cmake  SetTestsFilter.cmake
Test/commit/VulkanEngine/: CMakeLists.txt  commitSuite.cpp
Test/commit/VulkanEngine/cmake/: CodeCoverage.cmake
Test/commit/cmake/: SetTestFilters.cmake
Test/compile/: CMakeLists.txt  compileSuite.cpp
Test/compile/cmake/: SetTestFilters.cmake
Test/fuzz/: CMakeLists.txt  dummy.cpp
Test/perf/: CMakeLists.txt  perfSuite.cpp
Test/perf/cmake/: SetTestFilters.cmake
archive/: Doxyfile.in
cmake/: CPackOptions.cmake  Cache.cmake  CompileShadersToSPV.cmake  CompilerWarnings.cmake  CreateExternalLibs.cmake  CreateProjectFilesToTestLib.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  PreventInSourceBuilds.cmake  (+8 more)
(+756 files in other folders)
